--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equbiv="X-UA-Compatible" content="IE=edge">
         <title>To-do list</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,9 +17,9 @@
             <input type="button" id="submitButton" onclick="addItem()" value="Add item:">
             <h3 id="itemsList">Items:</h3>
 
-            <ul id="newUL">
-                
-                
+
+            <ul id="newUL">    
+
             </ul>
 
             </div>
