--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h1>To-do list</h1>
             <form action="#" id="myForm" onsubmit="addItem()">
                 <input type="text" id="itemField" placeholder="Add item:" />
-                <input type="button" id="submitButton" onclick="addItem()" value="Add item:" />
+                <input type="button" id="submitButton" onclick="addItem()" value="Add item:">
 
             </form>
             <h3 id='itemsList'>Items:</h3>
@@ -26,7 +26,7 @@
             </ul>
 
             <h4 id="checkedItems">Checked items:</h4>
-
+            <input type="button" id="submitButton" onclick="getStored()" value="get items:">
             </div>
 
            
