--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equbiv="X-UA-Compatible" content="IE=edge">
         <title>Shopping list</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +26,7 @@
 
 
             </form>
-            <h3 id='itemsHeader' hidden="">Items:</h3>
+            <h3 id='itemsHeader' hidden="">Items (click on an item to mark it checked):</h3>
 
 
             <ul id="listUl"> 
@@ -41,8 +40,3 @@
         
     </body>
 </html>
-
-
-
-
-    
